<resources>
    <string name="app_name">Hürriyet App</string>

    <string name="hintName">Ad Soyad</string>
    <string name="hintTc">T.C.Kimlik No</string>
    <string name="hintId">Id</string>
    <string name="sign_in">Giriş</string>
    <string name="delete">Sil</string>
    <string name="update">Güncelle</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_edit">Güncelle</string>
    <string name="title_activity_log">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
