<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="kodluyoruz.com.hurriyethaber.NewActi">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/dbUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintName"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dbPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTc"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dbid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintId"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/dbBtnUpdate"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/update"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dbBtnDelete"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/dbListed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>
